source/blender/nodes/geometry/nodes/node_geo_delete_geometry.cc
@@ -1156,19 +1156,19 @@ void separate_geometry(GeometrySet &geometry_set,
                        bool &r_is_error)
 {
   bool some_valid_domain = false;
-  if (geometry_set.has<PointCloudComponent>()) {
+  if (geometry_set.has_pointcloud()) {
     if (domain == ATTR_DOMAIN_POINT) {
       separate_point_cloud_selection(geometry_set, selection_field, invert);
       some_valid_domain = true;
     }
   }
-  if (geometry_set.has<MeshComponent>()) {
+  if (geometry_set.has_mesh()) {
     if (domain != ATTR_DOMAIN_CURVE) {
       separate_mesh_selection(geometry_set, selection_field, domain, mode, invert);
       some_valid_domain = true;
     }
   }
-  if (geometry_set.has<CurveComponent>()) {
+  if (geometry_set.has_curve()) {
     if (ELEM(domain, ATTR_DOMAIN_POINT, ATTR_DOMAIN_CURVE)) {
       separate_curve_selection(geometry_set, selection_field, domain, invert);
       some_valid_domain = true;
